package com.aberthier.myaccountingtable.models

import javax.persistence.Entity

enum class TypeFlux {
    INPUT,
    OUTPUT
}